adding "Out of memory error" string

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -6,6 +6,7 @@
     <string name="file_saved">Datei erfolgreich gespeichert</string>
     <string name="invalid_file_format">Ungültiges Dateiformat</string>
     <string name="no_storage_permissions">Berechtigung zum Zugriff auf Speicher erforderlich</string>
+    <string name="out_of_memory_error">Fehler: Zuwenig Speicher</string>
 
     <!-- Renaming -->
     <string name="rename_file">Datei umbenennen</string>
