--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -6,6 +6,7 @@
     <string name="file_saved">Fichier sauvegardé avec succès</string>
     <string name="invalid_file_format">Format de fichier invalide</string>
     <string name="no_storage_permissions">Nous avons besoin de la permission d\'accéder à votre stockage</string>
+    <string name="out_of_memory_error">Erreur excès de mémoire</string>
 
     <!-- Renaming -->
     <string name="rename_file">Renommer le fichier</string>
