--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -6,6 +6,7 @@
     <string name="file_saved">File salvato correttamente</string>
     <string name="invalid_file_format">Formato file non valido</string>
     <string name="no_storage_permissions">È necessaria l\'autorizzazione per l\'accesso all\'archiviazione</string>
+    <string name="out_of_memory_error">Errore memoria esaurita</string>
 
     <!-- Renaming -->
     <string name="rename_file">Rinomina file</string>
