--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -6,6 +6,7 @@
     <string name="file_saved">Arquivo salvo com sucesso</string>
     <string name="invalid_file_format">Formato de arquivo inválido</string>
     <string name="no_storage_permissions">Necessitamos de permissão para acessar o armazenamento</string>
+    <string name="out_of_memory_error">Memória insuficiente</string>
 
     <!-- Renaming -->
     <string name="rename_file">Renomear arquivo</string>
