--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -6,6 +6,7 @@
     <string name="file_saved">Файл успешно сохранен</string>
     <string name="invalid_file_format">Недопустимый формат файла</string>
     <string name="no_storage_permissions">Нужно разрешение для доступа к памяти</string>
+    <string name="out_of_memory_error">Память переполнена</string>
 
     <!-- Renaming -->
     <string name="rename_file">Изменение имени файла</string>
