--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -6,6 +6,7 @@
     <string name="file_saved">Filen sparad</string>
     <string name="invalid_file_format">Ogiltigt filformat</string>
     <string name="no_storage_permissions">Vi behöver behörigheten för att komma åt ditt lagringsutrymme</string>
+    <string name="out_of_memory_error">Out of memory error</string>
 
     <!-- Renaming -->
     <string name="rename_file">Döp om fil</string>
