--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -6,6 +6,7 @@
     <string name="file_saved">文件保存成功</string>
     <string name="invalid_file_format">无效文件格式</string>
     <string name="no_storage_permissions">请授予权限以访问您的存储器</string>
+    <string name="out_of_memory_error">内存不足</string>
 
     <!-- Renaming -->
     <string name="rename_file">重命名文件</string>
