--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -6,6 +6,7 @@
     <string name="file_saved">Soubor úspěšně uložen</string>
     <string name="invalid_file_format">Neplatný formát souboru</string>
     <string name="no_storage_permissions">Potřebuji oprávnění k přístupu na vaše úložiště</string>
+    <string name="out_of_memory_error">Zařízení nemá dostatek paměti</string>
 
     <!-- Renaming -->
     <string name="rename_file">Přejmenovat soubor</string>
