--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -6,6 +6,7 @@
     <string name="file_saved">File saved successfully</string>
     <string name="invalid_file_format">Invalid file format</string>
     <string name="no_storage_permissions">We need the permission to access your storage</string>
+    <string name="out_of_memory_error">Out of memory error</string>
 
     <!-- Renaming -->
     <string name="rename_file">Rename file</string>
