--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -6,6 +6,7 @@
     <string name="file_saved">Plik zapisany</string>
     <string name="invalid_file_format">Invalid file format</string>
     <string name="no_storage_permissions">We need the permission to access your storage</string>
+    <string name="out_of_memory_error">Błąd pamięci</string>
 
     <!-- Renaming -->
     <string name="rename_file">Zmień nazwę</string>
