updating an italian string

--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -43,7 +43,7 @@
     <string name="moving_success">File spostati correttamente</string>
     <string name="moving_success_partial">Alcuni file non possono essere spostati</string>
     <string name="copying_success_partial">Alcuni file non possono essere copiati</string>
-    <string name="folder_exists">Esiste già una cartella con quel nome</string>
+    <string name="no_files_selected">No files selected</string>
     <string name="saving">Salvataggio&#8230;</string>
 
     <!-- Create new -->
