add a new string for disabling Temporarily showing hidden media

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -132,6 +132,7 @@
     <string name="hide_folder">Ordner verstecken</string>
     <string name="unhide_folder">Ordner sichtbar machen</string>
     <string name="temporarily_show_hidden">Verstecktes temporär zeigen</string>
+    <string name="stop_showing_hidden">Stop showing hidden media</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortieren nach</string>
