--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -133,6 +133,7 @@
     <string name="hide_folder">Skryť priečinok</string>
     <string name="unhide_folder">Odkryť priečinok</string>
     <string name="temporarily_show_hidden">Dočasne zobraziť skryté</string>
+    <string name="stop_showing_hidden">Ukončiť zobrazovanie skrytých médií</string>
 
     <!-- Sorting -->
     <string name="sort_by">Zoradiť podľa</string>
