--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -132,6 +132,7 @@
     <string name="hide_folder">隐藏文件夹</string>
     <string name="unhide_folder">取消隐藏文件夹</string>
     <string name="temporarily_show_hidden">显示／隐藏缓存内容</string>
+    <string name="stop_showing_hidden">Stop showing hidden media</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序方式</string>
