--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -132,6 +132,7 @@
     <string name="hide_folder">Skrýt složku</string>
     <string name="unhide_folder">Odkrýt složku</string>
     <string name="temporarily_show_hidden">Dočasně zobrazit skryté</string>
+    <string name="stop_showing_hidden">Stop showing hidden media</string>
 
     <!-- Sorting -->
     <string name="sort_by">Seřadit dle</string>
