--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -132,6 +132,7 @@
     <string name="hide_folder">Hide folder</string>
     <string name="unhide_folder">Unhide folder</string>
     <string name="temporarily_show_hidden">Afficher temporairement les fichiers masqués</string>
+    <string name="stop_showing_hidden">Stop showing hidden media</string>
 
     <!-- Sorting -->
     <string name="sort_by">Trier par</string>
