--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -132,6 +132,7 @@
     <string name="hide_folder">Ocultar posta</string>
     <string name="unhide_folder">Mostrar pasta</string>
     <string name="temporarily_show_hidden">Mostrar ocultas temporariamente</string>
+    <string name="stop_showing_hidden">Stop showing hidden media</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
