add a couple strings related to font sizes

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -156,6 +156,11 @@
     <string name="settings">Einstellungen</string>
     <string name="customize_colors">Farben anpassen</string>
     <string name="show_hidden">Versteckte Dateien und Ordner zeigen</string>
+    <string name="font_size">Schriftgröße</string>
+    <string name="small">Klein</string>
+    <string name="medium">Medium</string>
+    <string name="large">Groß</string>
+    <string name="extra_large">Sehr groß</string>
 
     <!-- About -->
     <string name="about">Über</string>
