--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -156,6 +156,11 @@
     <string name="settings">Ajustes</string>
     <string name="customize_colors">Cambiar colores</string>
     <string name="show_hidden">Mostrar ficheros y directorios ocultos</string>
+    <string name="font_size">Tamaño de fuente</string>
+    <string name="small">Pequeña</string>
+    <string name="medium">Medium</string>
+    <string name="large">Grande</string>
+    <string name="extra_large">Enorme</string>
 
     <!-- About -->
     <string name="about">Acerca de</string>
