--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -156,6 +156,11 @@
     <string name="settings">Paramètres</string>
     <string name="customize_colors">Personnaliser les couleurs</string>
     <string name="show_hidden">Montrer les fichiers et dossiers cachés</string>
+    <string name="font_size">Font size</string>
+    <string name="small">Petite</string>
+    <string name="medium">Medium</string>
+    <string name="large">Large</string>
+    <string name="extra_large">Extra large</string>
 
     <!-- About -->
     <string name="about">A propos</string>
