--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -156,6 +156,11 @@
     <string name="settings">Settings</string>
     <string name="customize_colors">Customize colors</string>
     <string name="show_hidden">非表示のファイルとディレクトリーを表示する</string>
+    <string name="font_size">メモのフォントサイズ</string>
+    <string name="small">小</string>
+    <string name="medium">通常</string>
+    <string name="large">大</string>
+    <string name="extra_large">特大</string>
 
     <!-- About -->
     <string name="about">アプリについて</string>
