--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -156,6 +156,11 @@
     <string name="settings">Definições</string>
     <string name="customize_colors">Personalizar cores</string>
     <string name="show_hidden">Mostrar ficheiros e pastas ocultos</string>
+    <string name="font_size">Tamanho do texto</string>
+    <string name="small">Pequeno</string>
+    <string name="medium">Medium</string>
+    <string name="large">Grande</string>
+    <string name="extra_large">Muito grande</string>
 
     <!-- About -->
     <string name="about">Acerca</string>
