--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -157,6 +157,11 @@
     <string name="settings">Nastavenia</string>
     <string name="customize_colors">Upraviť farby</string>
     <string name="show_hidden">Zobraziť skryté súbory a priečinky</string>
+    <string name="font_size">Veľkosť písma</string>
+    <string name="small">Malé</string>
+    <string name="medium">Stredné</string>
+    <string name="large">Veľké</string>
+    <string name="extra_large">Extra veľké</string>
 
     <!-- About -->
     <string name="about">O aplikácií</string>
