--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -156,6 +156,11 @@
     <string name="settings">Nastavení</string>
     <string name="customize_colors">Přizpůsobit barvy</string>
     <string name="show_hidden">Zobrazit skryté soubory a složky</string>
+    <string name="font_size">Font size</string>
+    <string name="small">Small</string>
+    <string name="medium">Medium</string>
+    <string name="large">Large</string>
+    <string name="extra_large">Extra large</string>
 
     <!-- About -->
     <string name="about">O aplikaci</string>
