--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -156,6 +156,11 @@
     <string name="settings">Settings</string>
     <string name="customize_colors">Customize colors</string>
     <string name="show_hidden">Show hidden files and folders</string>
+    <string name="font_size">Font size</string>
+    <string name="small">Small</string>
+    <string name="medium">Medium</string>
+    <string name="large">Large</string>
+    <string name="extra_large">Extra large</string>
 
     <!-- About -->
     <string name="about">के बारे में</string>
