--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -156,6 +156,11 @@
     <string name="settings">Settings</string>
     <string name="customize_colors">Customize colors</string>
     <string name="show_hidden">Show hidden files and folders</string>
+    <string name="font_size">Betűméret</string>
+    <string name="small">Kicsi</string>
+    <string name="medium">Közepes</string>
+    <string name="large">Nagy</string>
+    <string name="extra_large">Óriási</string>
 
     <!-- About -->
     <string name="about">Információ</string>
