--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -156,6 +156,11 @@
     <string name="settings">Настройки</string>
     <string name="customize_colors">Настроить цвета</string>
     <string name="show_hidden">Показать скрытые папки</string>
+    <string name="font_size">Font size</string>
+    <string name="small">Мелкий</string>
+    <string name="medium">Нормальный</string>
+    <string name="large">Крупный</string>
+    <string name="extra_large">Очень крупный</string>
 
     <!-- About -->
     <string name="about">О приложении</string>
