--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -156,6 +156,11 @@
     <string name="settings">Inställningar</string>
     <string name="customize_colors">Egna färger</string>
     <string name="show_hidden">Visa dolda filer</string>
+    <string name="font_size">Font size</string>
+    <string name="small">Small</string>
+    <string name="medium">Medium</string>
+    <string name="large">Large</string>
+    <string name="extra_large">Extra large</string>
 
     <!-- About -->
     <string name="about">Om</string>
