--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -156,6 +156,11 @@
     <string name="settings">Ayarlar</string>
     <string name="customize_colors">Renkleri özelleştirme</string>
     <string name="show_hidden">Gizli dosyaları ve dizinleri göster</string>
+    <string name="font_size">Font size</string>
+    <string name="small">Small</string>
+    <string name="medium">Medium</string>
+    <string name="large">Large</string>
+    <string name="extra_large">Extra large</string>
 
     <!-- About -->
     <string name="about">Hakkında</string>
