--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -156,6 +156,11 @@
     <string name="settings">设置</string>
     <string name="customize_colors">自定义颜色</string>
     <string name="show_hidden">显示隐藏文件和文件夹</string>
+    <string name="font_size">Font size</string>
+    <string name="small">Small</string>
+    <string name="medium">Medium</string>
+    <string name="large">Large</string>
+    <string name="extra_large">Extra large</string>
 
     <!-- About -->
     <string name="about">关于</string>
