--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -130,9 +130,9 @@
     <string name="hide">Verstecken</string>
     <string name="unhide">Nicht verstecken</string>
     <string name="hide_folder">Ordner verstecken</string>
-    <string name="unhide_folder">Ordner sichtbar machen</string>
-    <string name="temporarily_show_hidden">Verstecktes temporär zeigen</string>
-    <string name="stop_showing_hidden">Stop showing hidden media</string>
+    <string name="unhide_folder">Ordner nicht verstecken</string>
+    <string name="temporarily_show_hidden">Verstecktes kurzzeitig zeigen</string>
+    <string name="stop_showing_hidden">Verstecktes wieder verbergen</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortieren nach</string>
@@ -155,7 +155,7 @@
     <!-- Settings -->
     <string name="settings">Einstellungen</string>
     <string name="customize_colors">Farben anpassen</string>
-    <string name="show_hidden">Versteckte Dateien und Ordner zeigen</string>
+    <string name="show_hidden">Versteckte Dateien/Ordner zeigen</string>
     <string name="font_size">Schriftgröße</string>
     <string name="small">Klein</string>
     <string name="medium">Medium</string>
