add a Donate button to the donate prompt dialog

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -172,6 +172,7 @@
     <string name="share_text">Ahoj, pojď se podívat na %1$s v/na %2$s</string>
     <string name="invite_via">Pozvat pomocí</string>
     <string name="rate_us_underlined"><u>Ohodnotit</u></string>
+    <string name="donate">Donate</string>
     <string name="donate_underlined"><u>Donate</u></string>
     <string name="follow_us">Sledujte nás:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
