--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -172,6 +172,7 @@
     <string name="share_text">Szia, ezt nézd meg! %1$s itt: %2$s</string>
     <string name="invite_via">Meghívó küldése itt</string>
     <string name="rate_us_underlined"><u>Értékelés</u></string>
+    <string name="donate">Donate</string>
     <string name="donate_underlined"><u>Donate</u></string>
     <string name="follow_us">Követés:</string>
     <string name="copyright">%1$s verzió\nSzerzői jogok: © Simple Mobile Tools %2$d</string>
