--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -172,6 +172,7 @@
     <string name="share_text">请前往 %2$s 看看我们的 %1$s 吧！</string>
     <string name="invite_via">分享到</string>
     <string name="rate_us_underlined"><u>为我们打分</u></string>
+    <string name="donate">捐赠</string>
     <string name="donate_underlined"><u>捐赠</u></string>
     <string name="follow_us">关注我们：</string>
     <string name="copyright">v %1$s Copyright © Simple Mobile Tools %2$d</string>
