--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -172,6 +172,7 @@
     <string name="share_text">Hola, ven y mira %1$s en %2$s</string>
     <string name="invite_via">Invitar con</string>
     <string name="rate_us_underlined"><u>Vótanos en Play Store</u></string>
+    <string name="donate">Donar</string>
     <string name="donate_underlined"><u>Donar</u></string>
     <string name="follow_us">Síguenos:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
