--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -172,6 +172,7 @@
     <string name="share_text">Hey, viens voir %1$s à %2$s</string>
     <string name="invite_via">Inviter via</string>
     <string name="rate_us_underlined"><u>Nous évaluer</u></string>
+    <string name="donate">Donner</string>
     <string name="donate_underlined"><u>Donner</u></string>
     <string name="follow_us">Suivez nous:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
