--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -172,6 +172,7 @@
     <string name="share_text">अरे, %1$s को %2$s पर देखो</string>
     <string name="invite_via">के माध्यम से आमंत्रित</string>
     <string name="rate_us_underlined"><u>हमे प्ले स्टोर पर रेट करें</u></string>
+    <string name="donate">Donate</string>
     <string name="donate_underlined"><u>Donate</u></string>
     <string name="follow_us">हमे फॉलो करें:</string>
     <string name="copyright">सं %1$s\nकॉपीराइट © सिंपल मोबाइल टूल्स %2$d</string>
