--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -172,6 +172,7 @@
     <string name="share_text">%2$s で %1$s を確認してください</string>
     <string name="invite_via">招待&#8230;</string>
     <string name="rate_us_underlined"><u>Play ストアで評価してください</u></string>
+    <string name="donate">Donate</string>
     <string name="donate_underlined"><u>Donate</u></string>
     <string name="follow_us">フォローしてください:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
