--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -172,6 +172,7 @@
     <string name="share_text">Hej, chodź zobacz %1$s z %2$s</string>
     <string name="invite_via">przez</string>
     <string name="rate_us_underlined"><u>Oceń</u></string>
+    <string name="donate">Przekaż darowiznę</string>
     <string name="donate_underlined"><u>Przekaż darowiznę</u></string>
     <string name="follow_us">Śledź nas na:</string>
     <string name="copyright">v %1$s\nCopyright Â© Simple Mobile Tools %2$d</string>
