--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -172,6 +172,7 @@
     <string name="share_text">Попробуй %1$s по ссылке %2$s</string>
     <string name="invite_via">Предложить с помощью</string>
     <string name="rate_us_underlined"><u>Оценить нас в Google Play</u></string>
+    <string name="donate">Поддержать разработчика</string>
     <string name="donate_underlined"><u>Поддержать разработчика</u></string>
     <string name="follow_us">Подписаться на нас:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
