--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -173,7 +173,8 @@
     <string name="share_text">Čauko, skús %1$s na %2$s</string>
     <string name="invite_via">Pozvať cez</string>
     <string name="rate_us_underlined"><u>Ohodnotiť aplikáciu</u></string>
-    <string name="donate_underlined"><u>Darovať</u></string>
+    <string name="donate">Podporiť</string>
+    <string name="donate_underlined"><u>Podporiť</u></string>
     <string name="follow_us">Nasledujte nás:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Dodatočné informácie</string>
