--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -172,6 +172,7 @@
     <string name="share_text">Hej, ta en titt på %1$s vid %2$s</string>
     <string name="invite_via">Inbjudan via</string>
     <string name="rate_us_underlined"><u>Betygsätt oss i Play Butiken</u></string>
+    <string name="donate">Donera</string>
     <string name="donate_underlined"><u>Donera</u></string>
     <string name="follow_us">Följ oss:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
