--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -172,6 +172,7 @@
     <string name="share_text">Hey, gel kontrol %1$s et %2$s</string>
     <string name="invite_via">Üzerinden davet et</string>
     <string name="rate_us_underlined"><u>Bizi değerlendirin</u></string>
+    <string name="donate">Bağışta bulun</string>
     <string name="donate_underlined"><u>Bağışta bulun</u></string>
     <string name="follow_us">Bizi takip et:</string>
     <string name="copyright">v %1$s\nTelif Hakkı © Simple Mobile Tools %2$d</string>
