--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -196,4 +196,5 @@
     <string name="stetho_title">Stetho (débogage de bases de données)</string>
     <string name="otto_title">Otto (bus d\'évenement)</string>
     <string name="photoview_title">PhotoView (gifs zoomables)</string>
+    <string name="pattern_title">PatternLockView (pattern protection)</string>
 </resources>
