--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -196,4 +196,5 @@
     <string name="stetho_title">Stetho (debug database)</string>
     <string name="otto_title">Otto (bus eventi)</string>
     <string name="photoview_title">PhotoView (gif zoomabili)</string>
+    <string name="pattern_title">PatternLockView (pattern protection)</string>
 </resources>
