--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -196,4 +196,5 @@
     <string name="stetho_title">Stetho (avlusning av databaser)</string>
     <string name="otto_title">Otto (händelsebuss)</string>
     <string name="photoview_title">PhotoView (zoombara GIF-bilder)</string>
+    <string name="pattern_title">PatternLockView (pattern protection)</string>
 </resources>
