--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -196,4 +196,5 @@
     <string name="stetho_title">Stetho (hata ayıklama veritabanları)</string>
     <string name="otto_title">Otto (event bus)</string>
     <string name="photoview_title">Fotoğraf Görüntüleme (yakınlaştırılabilen gif\'ler)</string>
+    <string name="pattern_title">PatternLockView (pattern protection)</string>
 </resources>
