--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -196,4 +196,5 @@
     <string name="stetho_title">Stetho (debugging databases)</string>
     <string name="otto_title">Otto (event bus)</string>
     <string name="photoview_title">PhotoView (zoomable gifs)</string>
+    <string name="pattern_title">PatternLockView (pattern protection)</string>
 </resources>
