--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -195,4 +195,5 @@
     <string name="stetho_title">Stetho (Duomenø baziø ðifravimui)</string>
     <string name="otto_title">Otto (Ávykiø sàraðams)</string>
     <string name="photoview_title">PhotoView (judanèiø paveiksliukø didinimui)</string>
+    <string name="pattern_title">PatternLockView (pattern protection)</string>
 </resources>
