--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -196,4 +196,5 @@
     <string name="stetho_title">Stetho (depuração a bases de dados)</string>
     <string name="otto_title">Otto (canal de eventos)</string>
     <string name="photoview_title">PhotoView (animação de gifs)</string>
+    <string name="pattern_title">PatternLockView (pattern protection)</string>
 </resources>
