--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -196,4 +196,5 @@
     <string name="stetho_title">Stetho (базы данных отладки)</string>
     <string name="otto_title">Otto ("шина" событий)</string>
     <string name="photoview_title">PhotoView (масштабирование gif)</string>
+    <string name="pattern_title">PatternLockView (pattern protection)</string>
 </resources>
