--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -197,4 +197,5 @@
     <string name="stetho_title">Stetho (odladenie databáz)</string>
     <string name="otto_title">Otto (event bus)</string>
     <string name="photoview_title">PhotoView (priblížiteľné gifká)</string>
+    <string name="pattern_title">PatternLockView (ochrana vzorom)</string>
 </resources>
