--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -196,4 +196,5 @@
     <string name="stetho_title">Stetho (Datenbanken debuggen)</string>
     <string name="otto_title">Otto (Event Bus)</string>
     <string name="photoview_title">PhotoView (Zoombare GIFs)</string>
+    <string name="pattern_title">PatternLockView (pattern protection)</string>
 </resources>
